syntax = "proto3";

package blog;
option go_package = "blog/blogpb";

message Blog {
    string id = 1;
    int32 user_id = 2;
    string title = 3;
    string body = 4;
    repeated string tags = 5;
    string phone = 6;
    enum Gender {
        Male = 0;
        Fmale = 1;
    }
    Gender gender = 7;
}

message CreateBlogRequest {
    Blog blog = 1;
}

message CreateBlogResponse {
    Blog blog = 1;

}

message ReadBlogRequest {
    string blog_id = 1;
}

message ReadBlogResponse {
    Blog blog = 1;

}

message CreateNotifCodeRequest {
    Blog blog = 1;
}

message UpdateBlogRequest {
    Blog blog = 1;

}

message UpdateBlogResponse {
    Blog blog = 1;
}

message CreateNotifCodeResponse {
    string result = 1;

}

message ListBlogRequest {
}

message ListBlogResponse {
    Blog blog = 1;
}

service BlogService {
    rpc CreateBlog (CreateBlogRequest) returns (CreateBlogResponse);
    rpc ReadBlog (ReadBlogRequest) returns (ReadBlogResponse);
    rpc UpdateBlog (UpdateBlogRequest) returns (UpdateBlogResponse);
    rpc CreateNotifCode (CreateNotifCodeRequest) returns (CreateNotifCodeResponse);
    rpc ListBlog (ListBlogRequest) returns (stream ListBlogResponse);
}